--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -15,7 +15,7 @@
 
 {% import "_includes/forms" as forms %}
 
-{% do view.registerAssetBundle( "ssplugin\\sstwitterfeed\\assetbundles\\sstwitterfeed\\SsTwitterFeedAsset" ) %}
+{% do view.registerAssetBundle( "ssplugin\\sstwitterfeed\\assetbundles\\SsTwitterFeed\\SsTwitterFeedAsset" ) %}
 
 <p> Connect to a Twitter account click on button </p>
 {% if craft.ssTwitterFeed.getUrl() != "Could not authenticate." %}
